fix: fix translation

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -30,6 +30,8 @@
       "newChat": "New Chat",
       "noConversations": "No conversations yet",
       "noResults": "No conversations found",
+      "searchPlaceholder": "Search Chats",
+      "deleteConversation": "Delete conversation",
       "tools": "Available Tools",
       "toolsList": {
         "weather": "Weather information",
